--- a/horarios.html
+++ b/horarios.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Calendario</title>
+    <link rel="icon" type="image/x-icon" href="icon/Logo_UNIR.png">
 </head>
 
 <body>
