pongo hola en HEad

--- a/horarios.html
+++ b/horarios.html
@@ -17,7 +17,7 @@
                         height="200"></a></td>
             <td align="center" bgcolor="#B684OO">
                 <font face="Arial" color="white">
-                    <h1><b>UNIR FP</b></br>Tu mejor elección</h1>
+                    <h1><b>UNIR FP hola</b></br>Tu mejor elección</h1>
                 </font>
             </td>
         </tr>
